@@ -7,6 +7,10 @@ TODO: maybe implement a default message channel, very much like Erlang
 
 4.02
 	- fix a very minor per-coroutine memleak (a single codereference).
+	- fixed a bug where the currently in-use c context would be freed
+          prematurely (can happen only when programs change the stacksize
+          or use tracing).
+        - tracing can no longer keep a coro alive after it terminated.
 
 4.01 Fri Oct  5 22:10:49 CEST 2007
 	- instead of recreating *a* standard output handle we simply
